@@ -3,6 +3,7 @@
 * Bug fixes:
   Fix a bug which disabled to assign keypad keys in ~/.mlterm/shortcut.
   Fix wrong processing of percentage in a font name on framebuffer and wayland.
+  Fix alpha blending in drawing glyphs on wayland.
 
 ver 3.8.2
 * Support page of VT400 or later. (NP, PP, PPA, PPR, PPB, DECCRA and DECLRP)
